抽奖库存更新、API封装完成